# zero

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  MANDATE.md  README.md  __init__.py  agent.py  backfill.json  batch_gen.json  cancel.json  carousel_check.json  carousels_check.json  chars_status.json  chars_test.json  chars_updated.json  cheapest-tab.yml  codemoltbotsprints_tmp.json  codemoltbottmp_t93.json  config.yaml  ccodemoltbottemp_api_logs.txt  ccodemoltbottemp_openapi.json  ccodemoltbotworkspacetmp_sprints.json  ccodezeroworkspacetmp_legion_api.json  docker-compose.openclaw.archive.yml  docker-compose.searxng.yml  docker-compose.sprint.yml  docker-compose.yml  error_handlers.py  final-overview-deep.yml  final-overview.yml  logging_config.py  main.py  ollama_ps.json  ollama_tags.json  overview-tab.yml  portals-tab.yml  promos-tab.yml  pyproject.toml  (+25 more)
.claude/: MEMORY.md  settings.json  settings.local.json
.clawhub/: lock.json
.legion/: feature_skills.json
.playwright-mcp/: page-2026-04-16T23-27-24-122Z.yml  page-2026-04-16T23-28-00-298Z.yml  page-2026-04-16T23-28-10-794Z.yml  page-2026-04-16T23-28-39-771Z.yml  page-2026-04-16T23-28-48-940Z.yml  page-2026-04-16T23-46-33-102Z.yml  page-2026-04-16T23-46-57-021Z.yml  page-2026-04-16T23-48-10-297Z.yml  page-2026-04-16T23-48-54-779Z.yml  page-2026-04-16T23-51-12-559Z.yml  page-2026-04-17T17-47-24-704Z.yml  page-2026-04-17T17-48-25-475Z.yml  page-2026-04-22T18-47-20-675Z.yml  page-2026-04-22T18-52-09-983Z.yml  page-2026-04-22T18-52-42-646Z.yml  page-2026-04-22T18-53-13-932Z.yml  page-2026-04-22T18-54-02-996Z.yml  page-2026-04-22T18-54-17-714Z.yml  page-2026-04-22T18-54-32-587Z.yml  page-2026-04-22T19-53-53-725Z.yml  page-2026-04-22T19-54-34-261Z.yml  page-2026-04-22T19-56-52-467Z.yml  page-2026-04-22T19-57-11-474Z.yml  page-2026-04-23T16-16-48-605Z.yml  page-2026-04-23T16-17-19-283Z.yml  page-2026-04-23T16-17-39-662Z.yml  page-2026-05-08T18-28-51-494Z.yml  page-2026-05-08T18-30-36-988Z.yml  page-2026-05-08T18-30-52-436Z.yml  page-2026-05-08T19-22-48-870Z.yml  page-2026-05-08T19-22-57-571Z.yml  page-2026-05-13T01-55-45-613Z.yml  page-2026-05-13T01-56-22-518Z.yml  page-2026-05-13T01-57-36-865Z.yml  page-2026-05-13T03-18-31-583Z.yml  page-2026-05-13T03-20-38-393Z.yml  page-2026-05-13T03-34-09-630Z.yml  page-2026-05-13T15-07-15-754Z.yml  page-2026-05-13T15-08-24-816Z.yml  page-2026-05-13T15-11-40-784Z.yml  (+9 more)
app/: main.py
auth/: endpoints.py
backend/: Dockerfile  QUICK_START.md  TEST_RESULTS.md  alembic.ini  monitor_email_automation.py  package_manager.py  requirements.txt  run.py  smoke_test_carousel_v2.py  test_integration.py
config/: zero.json
docs/: ARCHITECTURE.md  CLAUDE_CODE_CONTEXT_OPTIMIZATION.md  MANAGEMENT-SYSTEMS-PLAN.md  PREDICTION_MARKET_SYSTEM.md  SELF_IMPROVEMENT_PROCESS.md  SecondBrain.md  TIKTOK_SHOP_SETUP.md  UPGRADE_PROMPT.md  carosel.txt  content-legal-framing.md  fish-speech.md  local-brains.md  mobile-pwa.md  obsidian-mcp-install.md  openhuman-openhands-adoption-report.md  reachy-roadmap.md
errors/: endpoints.py
frontend/: Dockerfile  (+11 more)
reachy_app/: README.md  pyproject.toml
reachy_app/reachy_mini_zero/: __init__.py  main.py  streaming.py
(+1525 files in other folders)
