[tool.poetry]
name = "zero"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
pytest = "^6.2.4"
coverage = "^6.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=2.4.0"]
build-backend = "poetry.core.masonry.api"