[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-personal-assistant"
version = "0.1.0"
description = "Zero Personal Assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
    "typer>=0.25.1",
    "click>=8.4.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.22.1",
    "httpx[http2]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
]

[project.scripts]
zero = "zero.main:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
