[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_zero"
version = "0.1.0"
description = "Installable Reachy Mini app that turns your robot into a client of the Zero chief-of-staff backend: voice loop, persona switching, and gesture dispatch run in Zero; Reachy's mic + speaker + motors are just the I/O."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "httpx>=0.27",
    "numpy>=1.24",
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_zero = "reachy_mini_zero.main:ReachyMiniZero"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mini_zero = ["**/*"]
